02/12/2022
- Add feature, hide boosts toots
- Add feature, hide replies toots

01/11/2022
- Update Readme.md (Install and setup text)

22/01/2022
- Replace account_id terminology for user_id
- Show retoots media in timeline

01/06/2021
- Update Readme.md

24/05/2021
- Improve avatar + user name for a11y

23/05/2021
- Create a codepen demo

22/05/2021
- Add avatar name
- Use id instead of css class for js selectors
- Rearrange functions in js

17/05/2021
- Add ellipses for long messages
- Remove access token
- Add rel="tag noopener noreferrer" for hashtag links

06/04/2021
- First commit
 