@@ -1,3 +1,7 @@
+21/01/2023
+- Fix spoiler content show/hide
+- Add feature, choose a maximum number of lines of text
+
 02/12/2022
 - Add feature, hide boosts toots
 - Add feature, hide replies toots
